--- a/PT_codes.html
+++ b/PT_codes.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Protection treatment codes</title>
-	<link rel="icon" type="image/png" href="./favicon/OS-favicon.png">
+	<link rel="icon" type="image/png" href="./favicon/os-favicon.png">
     <meta name="description" content="description"/>
     <meta name="author" content="Adrian Tudor" />
     <meta name="keywords" content="Premium Aerotec" />
